<resources>
    <string name="app_name">欢乐家校通</string>
    <string name="my_text">我的资料</string>
    <string name="setting_text">设置</string>
    <string name="about_text">关于</string>
    <string name="check_update">检查更新</string>
    <string name="exit_login_text">退出登录</string>
    <string name="news_text">消息公告</string>
    <string name="learn_text">学习任务</string>
    <string name="statis_text">统计分析</string>
    <string name="version_is_new">已是最新</string>
    <string name="version_isnt_new">发现新版本</string>
    <string name="confirm_exist">你确认要退出吗？</string>
    <string name="bind_hint_title">温馨提示</string>
    <string name="bind_hint_content">绑定当前的手机号码不但可以用手机号码来登录，还可以方便的找回账号密码哦。要绑定当前的手机号码吗？</string>
    <string name="hint_dialog_waiting">加载中&#8230;</string>
    <string name="common_error_no_net">没有连接网络</string>
    <string name="common_error_system">系统错误</string>
    <string name="common_error_net_error">网络异常</string>
    <string name="common_error_unknown">未知错误，请查看Log日志</string>
    <string name="emoji_find">请勿输入Emoji等非法字符！</string>
    <string name="error_crash">程序出错，即将退出&#8230;错误日志已保存!</string>
    <string name="save">保存</string>
    <string name="cancel">取消</string>
    <string name="back">后退</string>
    <string name="send">发送</string>
    <string name="ok">确定</string>
    <string name="good">好</string>
    <string name="finish">完成</string>
    <string name="delete">删除</string>
    <string name="delete_success">删除成功</string>
    <string name="delete_failed">删除失败</string>
    <string name="login">登录</string>
    <string name="login_id_hint">账号/手机号/身份证号码</string>
    <string name="login_password_hint">密&#160;&#160;码</string>
    <string name="login_hint">登&#160;&#160;&#160;&#160;录</string>
    <string name="login_accept_licence_hint">我已经阅读并接受&#160;</string>
    <string name="login_accept_licence"><u>用户使用许可协议</u></string>
    <string name="login_accept_licence_title">用户使用许可协议</string>
    <string name="login_forgot_password">忘记密码</string>
    <string name="login_result_success">登录成功</string>
    <string name="login_result_failed">登录失败：</string>
    <string name="login_error_input_id">请输入账号</string>
    <string name="login_error_input_password">请输入6&#8211;16位正确格式的密码</string>
    <string name="login_error_select_licence">请阅读并接受用户使用许可协议</string>
    <string name="login_reset_password_success">密码修改成功！请牢记您的密码，现在可以使用新密码重新登录。</string>
    <string name="findPSW_title">找回密码</string>
    <string name="findPSW_input_hint">需要找回密码的账号：</string>
    <string name="findPSW_input_id_hint">账号/手机号/身份证号</string>
    <string name="findPSW_input_something">请输入需要找回的账号/手机号/身份证号</string>
    <string name="findPSW_notes">密码找回目前仅支持已绑定手机号码的用户！未绑定手机号码的用户，请联系系统管理员帮您重置密码。</string>
    <string name="findPSW_next_step">下一步</string>
    <string name="findPSW_error_no_account">您输入的账号不存在，请重新输入！</string>
    <string name="findPSW_error_no_link">该账号未绑定手机号码！</string>
    <string name="findPSW_check_authcode_title">填写验证码</string>
    <string name="findPSW_account">账号：%1$s</string>
    <string name="findPSW_send_authcode_success">已向您的手机%1$s发送了一条短信，包含6位数字验证码。</string>
    <string name="findPSW_submit">提&#160;&#160;交</string>
    <string name="findPSW_submit_failed">验证失败</string>
    <string name="findPSW_submit_failed_length">请输入验证码</string>
    <string name="findPSW_no_receive_authcode">没有收到短信验证码？</string>
    <string name="findPSW_delay_resend">%1$d秒后重新发送验证码</string>
    <string name="findPSW_resend">重新发送验证码</string>
    <string name="findPSW_resend_success">重新发送验证码成功</string>
    <string name="findPSW_auth_success">校验成功</string>
    <string name="findPSW_reset_password_title">设置新密码</string>
    <string name="input_phone_hint">请输入手机号码</string>
    <string name="input_new_password">请输入新密码：</string>
    <string name="input_new_password_hint">请输入新密码</string>
    <string name="input_password_hint">密码由6&#8211;16个英文字母、数字或符号组成</string>
    <string name="input_new_password_again">确认新密码：</string>
    <string name="input_new_password_again_hint">请确认新密码</string>
    <string name="findPSW_error_password_style">密码格式不正确，请重新输入</string>
    <string name="findPSW_error_not_compare">两次密码输入不一致，请重新输入</string>
    <string name="findPSW_reset_success_title">恭喜你！</string>
    <string name="findPSW_reset_success_content">账号%1$s密码修改成功！请牢记您的密码，现在可以使用新密码重新登录。</string>
    <string name="findPSW_reset_failed">重置密码失败</string>
    <string name="setting_about">关于</string>
    <string name="setting_app_name">欢乐家校通&#160;%1$s</string>
    <string name="setting_web_site">官方网站</string>
    <string name="setting_default_web_site">www.eduliren.com</string>
    <string name="setting_wechat_name">官方公众号</string>
    <string name="setting_hot_line">客服电话</string>
    <string name="setting_default_line_number">400&#8211;6512&#8211;400</string>
    <string name="setting_hot_line_number">周一至周五 9:00&#8211;17:00</string>
    <string name="setting_about_failed">获取关于信息失败</string>
    <string name="setting_confirm_calling">当前禁止拨打电话</string>
    <string name="setting_calling">拨打</string>
    <string name="setting_settings">设置</string>
    <string name="setting_feedback">意见反馈</string>
    <string name="setting_feedback_hint">让我们更好</string>
    <string name="setting_wifi_download">仅使用Wi-Fi下载附件</string>
    <string name="setting_wifi_download_hint">开启后会帮您节省手机流量</string>
    <string name="setting_clear_cache">清除本地缓存</string>
    <string name="setting_clear_cache_hint">是否要清除本地缓存？</string>
    <string name="setting_clear_cache_success">清除本地缓存成功</string>
    <string name="setting_clear_cache_failed">清除缓存失败</string>
    <string name="setting_cache_size">共%1$s</string>
    <string name="setting_change_password">修改密码</string>
    <string name="setting_change_password_success">修改密码完成，请重新登录！</string>
    <string name="setting_change_password_failed">修改密码失败</string>
    <string name="setting_input_current_password">请输入当前密码：</string>
    <string name="setting_input_current_password_hint">请输入当前密码</string>
    <string name="setting_feedback_content">欢迎对我们的产品提出您的宝贵意见或建议！</string>
    <string name="setting_feedback_input_hint">请在此输入，限制400个字。</string>
    <string name="setting_feedback_input_non">请输入意见内容！</string>
    <string name="setting_feedback_input_over_length">超过字数上限，请分别提交。</string>
    <string name="setting_feedback_success">反馈意见发送成功！</string>
    <string name="setting_feedback_failed">发送失败</string>
    <string name="setting_update_title">检查更新</string>
    <string name="setting_update_ing">正在检查是否有最新版本&#8230;</string>
    <string name="setting_update_already_update">已是最新版本！</string>
    <string name="setting_update_no_list">未发现版本历史记录！</string>
    <string name="setting_update_new_version_found">发现新版本！</string>
    <string name="setting_update_new_version_title">有新版本：%1$s</string>
    <string name="setting_update_later">下次再说</string>
    <string name="setting_update_now">立刻更新</string>
    <string name="setting_updating_title">正在更新</string>
    <string name="setting_update_cancel">取消下载</string>
    <string name="my_info">我的资料</string>
    <string name="info_avatar">用户头像</string>
    <string name="info_take_pic">拍照</string>
    <string name="info_pick_pic">从相册选取头像</string>
    <string name="info_no_camera">未发现照相机！</string>
    <string name="info_avatar_upload_success">头像上传成功</string>
    <string name="info_avatar_upload_failed">头像上传失败</string>
    <string name="info_name">用户姓名</string>
    <string name="info_account">账号</string>
    <string name="info_tel">联系电话</string>
    <string name="info_tel_hint">未绑定手机号码</string>
    <string name="info_mail">电子邮箱</string>
    <string name="info_mail_hint">填写常用邮件地址</string>
    <string name="info_locate_school">所在学校</string>
    <string name="info_locate_class">所在班级</string>
    <string name="info_error_avatar_not_found">头像下载失败：</string>
    <string name="bind_email_title">常用邮件地址</string>
    <string name="bind_email_content">请输入您的常用电子邮件地址：</string>
    <string name="bind_email_hint">请输入正确的电子邮件格式</string>
    <string name="bind_email_success">绑定成功</string>
    <string name="bind_email_failed">绑定失败</string>
    <string name="bind_phone_title">绑定手机号码</string>
    <string name="bind_phone_input_phone_content">请输入您当前的手机号码：</string>
    <string name="bind_phone_hint">请输入正确的手机号码</string>
    <string name="bind_phone_get_authcode">获取验证码</string>
    <string name="bind_phone_delay">%1$d秒后再试</string>
    <string name="bind_phone_send_success">已向您的手机发送了一条包含验证码的短信</string>
    <string name="bind_phone_send_failed">发送失败</string>
    <string name="bind_phone_success_title">绑定成功</string>
    <string name="bind_phone_success_content">现在您可以用手机号%1$s登录，再也不怕密码忘记了，使用我的手机号码就能轻松找回！</string>
    <string name="bind_phone_failed">绑定失败</string>
    <string name="bind_phone_unbind_hint">当前已绑定手机号码</string>
    <string name="bind_phone_unbind">解除绑定</string>
    <string name="unbind_phone_hint">已向您的手机发送了一条短信，包含6位数字验证码，请填写在下方</string>
    <string name="unbind_phone_failed">解除绑定失败</string>
    <string name="unbind_phone_confirm">您确定不再使用此手机号码%1$s了？解除绑定后您将不能使用此手机号码用于账户登录及找回密码！</string>
    <string name="unbind_phone_success_title">解除绑定完成</string>
    <string name="unbind_phone_success_content">您不能使用此手机号码%1$s来登录或找回密码！当前账号未绑定手机号码，您可以重新绑定一个新的号码。</string>
    <string name="bind_authcode">验证码：</string>
    <string name="bind_authcode_hint">请输入验证码</string>
    <string name="learn_task">学习任务</string>
    <string name="home_work">作业</string>
    <string name="preview">预习</string>
    <string name="exam">考试</string>
    <string name="practice">练习</string>
    <string name="test">测试</string>
    <string name="error_book">错题本</string>
    <string name="subject">科目</string>
    <string name="uncommitted">未提交</string>
    <string name="committed">已提交</string>
    <string name="corrected">已批改</string>
    <string name="expired">已过期</string>
    <string name="end">截止</string>
    <string name="home_details">作业详情</string>
    <string name="pre_details">预习详情</string>
    <string name="pre_target">预习目标</string>
    <string name="witch_section">所属章节</string>
    <string name="home_info">作业说明</string>
    <string name="read_info">阅读理解全文</string>
    <string name="exam_online">在线考试</string>
    <string name="exam_offline">线下考试</string>
    <string name="exam_details">考试详情</string>
    <string name="unknown_subject">不限科目</string>
    <string name="error_parsing">错题解析</string>
    <string name="all_parsing">全部解析</string>
    <string name="attachment">附件</string>
    <string name="website">参考网站</string>
    <string name="kg_score">客观题得分:&#160;&#160;</string>
    <string name="zg_score">主观题得分:&#160;&#160;</string>
    <string name="zg_total">主观题共计&#160;&#160;</string>
    <string name="x_score">&#160;&#160;/80分</string>
    <string name="blank">&#160;/</string>
    <string name="zg_mark">主观题正在批阅中&#8230;</string>
    <string name="zg_test_mark">主观题系统不予评判打分!</string>
    <string name="correct_rate">正确率</string>
    <string name="practice_details">练习详情</string>
    <string name="test_details">测试详情</string>
    <string name="score">&#160;&#160;分</string>
    <string name="score1">分</string>
    <string name="semester">本学期</string>
    <string name="week">近一周</string>
    <string name="today">今天</string>
    <string name="month">近一月</string>
    <string name="today_error">今日新增</string>
    <string name="other_error">剩余错题</string>
    <string name="right_error">重做正确</string>
    <string name="open">打开</string>
    <string name="download">下载</string>
    <string name="class_rank">班级排名：</string>
    <string name="common">共</string>
    <string name="no_answer">未答完</string>
    <string name="answer_right">，答对</string>
    <string name="question">题</string>
    <string name="used_time">用时</string>
    <string name="synchronous_practice">同步练习</string>
    <string name="intensive_test">强化测试</string>
    <string name="classroom_evaluation">随堂测评</string>
    <string name="kg_question_m">客观题：</string>
    <string name="zg_question_m">主观题：</string>
    <string name="teacher">教师</string>
    <string name="student">学生</string>
    <string name="parent">家长</string>
</resources>