<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout style="@style/pageStyle.grey"
                                       xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/rv_headerBar"
        layout="@layout/common_header"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rv_headerBar"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/common_margin_top"
            android:text="@string/findPSW_input_hint"/>

        <EditText
            android:id="@+id/edtTxt_account_number"
            style="@style/editTextStyle.account"
            android:layout_marginTop="@dimen/common_margin_less"
            android:hint="@string/findPSW_input_id_hint"/>

        <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/common_margin_normal"
            android:text="@string/findPSW_notes"/>

        <Button
            android:id="@+id/btn_next_step"
            style="@style/buttonStyle"
            android:layout_marginTop="@dimen/common_margin_between_items"
            android:text="@string/findPSW_next_step"/>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>
