<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout style="@style/pageStyle.grey"
                                       xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/rv_headerBar"
        layout="@layout/common_header"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_headerBar">

        <com.zhy.autolayout.AutoLinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/common_margin_top"
                android:text="@string/setting_input_current_password"/>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtTxt_current_password"
                    style="@style/editTextStyle.password"
                    android:layout_marginTop="@dimen/common_margin_less"
                    android:hint="@string/setting_input_current_password_hint"
                    android:imeOptions="actionNext"/>

                <ImageView
                    android:id="@+id/iv_current_password"
                    style="@style/passwordCheckStyle"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/common_margin_large"
                android:text="@string/input_new_password"/>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtTxt_new_password"
                    style="@style/editTextStyle.password"
                    android:layout_marginTop="@dimen/common_margin_less"
                    android:hint="@string/input_new_password_hint"
                    android:imeOptions="actionNext"/>

                <ImageView
                    android:id="@+id/iv_new_password"
                    style="@style/passwordCheckStyle"/>
            </com.zhy.autolayout.AutoRelativeLayout>

            <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/common_margin_normal"
                android:text="@string/input_password_hint"/>

            <TextView
                style="@style/textViewStyle"
                android:layout_marginTop="@dimen/common_margin_large"
                android:text="@string/input_new_password_again"/>

            <com.zhy.autolayout.AutoRelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/edtTxt_password_again"
                    style="@style/editTextStyle.password"
                    android:layout_marginTop="@dimen/common_margin_less"
                    android:hint="@string/input_new_password_again_hint"
                    android:imeOptions="actionDone"/>

                <ImageView
                    android:id="@+id/iv_password_again"
                    style="@style/passwordCheckStyle"/>
            </com.zhy.autolayout.AutoRelativeLayout>
        </com.zhy.autolayout.AutoLinearLayout>
    </ScrollView>
</com.zhy.autolayout.AutoRelativeLayout>