<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout style="@style/pageStyle.grey"
                                       xmlns:android="http://schemas.android.com/apk/res/android">

    <include
        android:id="@+id/rv_headerBar"
        layout="@layout/common_header"/>

    <com.zhy.autolayout.AutoLinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rv_headerBar"
        android:orientation="vertical">

        <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/common_margin_top"
            android:text="@string/input_new_password"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtTxt_new_password"
                style="@style/editTextStyle.password"
                android:layout_marginTop="@dimen/common_margin_less"
                android:hint="@string/input_new_password_hint"/>

            <ImageView
                android:id="@+id/iv_new_password"
                style="@style/passwordCheckStyle"/>
        </com.zhy.autolayout.AutoRelativeLayout>

        <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/common_margin_normal"
            android:text="@string/input_password_hint"/>

        <TextView
            style="@style/textViewStyle"
            android:layout_marginTop="@dimen/common_margin_large"
            android:text="@string/input_new_password_again"/>

        <com.zhy.autolayout.AutoRelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edtTxt_password_again"
                style="@style/editTextStyle.password"
                android:layout_marginTop="@dimen/common_margin_less"
                android:hint="@string/input_new_password_again_hint"/>

            <ImageView
                android:id="@+id/iv_password_again"
                style="@style/passwordCheckStyle"/>
        </com.zhy.autolayout.AutoRelativeLayout>
    </com.zhy.autolayout.AutoLinearLayout>
</com.zhy.autolayout.AutoRelativeLayout>