<?xml version="1.0" encoding="utf-8"?>
<com.zhy.autolayout.AutoRelativeLayout style="@style/pageStyle.green"
                                       xmlns:android="http://schemas.android.com/apk/res/android"
                                       xmlns:round="http://schemas.android.com/apk/res-auto">


    <include
        android:id="@+id/rv_headerBar"
        layout="@layout/common_header"/>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rv_avatar"
        style="@style/centerStyle"
        android:layout_below="@id/rv_headerBar"
        android:layout_marginTop="@dimen/common_margin_top">

        <com.lirenkj.educationforparent.share.views.RoundedImageView
            android:id="@+id/iv_avatar"
            android:layout_width="@dimen/avatar_size"
            android:layout_height="@dimen/avatar_size"
            android:src="@mipmap/public_imges_128px"
            round:riv_oval="true"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rv_input_boxes"
        style="@style/centerStyle"
        android:layout_below="@id/rv_avatar"
        android:layout_marginTop="@dimen/common_margin_between_items">

        <EditText
            android:id="@+id/edtTxt_id"
            style="@style/editTextStyle.account"
            android:hint="@string/login_id_hint"
            android:imeOptions="actionNext"/>

        <ImageView
            android:id="@+id/iv_dropdown"
            android:layout_width="@dimen/dropdown_arrow_size"
            android:layout_height="@dimen/dropdown_arrow_size"
            android:layout_alignBottom="@+id/edtTxt_id"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="@dimen/common_margin_right"
            android:layout_marginRight="@dimen/common_margin_right"
            android:src="@mipmap/down_arrow"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/edtTxt_password"
            style="@style/editTextStyle.password"
            android:layout_below="@id/edtTxt_id"
            android:layout_marginTop="@dimen/common_margin_inner_items"
            android:hint="@string/login_password_hint"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rv_login"
        style="@style/centerStyle"
        android:layout_below="@id/rv_input_boxes"
        android:layout_marginTop="@dimen/common_margin_between_items">

        <Button
            android:id="@+id/btn_login"
            style="@style/buttonStyle"
            android:background="@drawable/common_corner_button_login"
            android:text="@string/login_hint"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <com.zhy.autolayout.AutoRelativeLayout
        android:id="@+id/rv_accept_licence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/rv_login"
        android:layout_marginLeft="@dimen/common_margin_left"
        android:layout_marginTop="@dimen/common_margin_between_items">

        <CheckBox
            android:id="@+id/chk_accept_licence"
            android:layout_width="@dimen/chk_size"
            android:layout_height="@dimen/chk_size"
            android:background="@drawable/common_checkbox"
            android:button="@null"/>

        <TextView
            android:id="@+id/tv_accept_licence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/chk_accept_licence"
            android:layout_toRightOf="@+id/chk_accept_licence"
            android:paddingLeft="@dimen/h_4"
            android:text="@string/login_accept_licence_hint"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"/>

        <TextView
            android:id="@+id/tv_licence"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/tv_accept_licence"
            android:layout_toRightOf="@+id/tv_accept_licence"
            android:text="@string/login_accept_licence"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_small"/>
    </com.zhy.autolayout.AutoRelativeLayout>

    <TextView
        android:id="@+id/tv_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/rv_accept_licence"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/rv_accept_licence"
        android:layout_marginBottom="@dimen/common_margin_left"
        android:layout_marginRight="@dimen/common_margin_left"
        android:text="@string/login_forgot_password"
        android:textColor="@android:color/white"
        android:textSize="@dimen/text_size_small"/>
</com.zhy.autolayout.AutoRelativeLayout>
